# flight_data_visualisation

./: .gitignore  README.md  pyproject.toml  run_api.ps1  run_worker.ps1  wipe.py
backend/: .env  alembic.ini  app.py  events.py  packet_parser.py  packet_schema.json  requirements.txt  security.py  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/core/: config.py
backend/data_store/: metadata.db
backend/data_store/51553881-b154-45f2-9d4b-1b7efeef42ed/plots/: overlay_147180975.html  overlay_4148299724.html
backend/data_store/6a28fa02-7ec6-4699-a2fe-3f3ebf13e7f3/: parsed.parquet
backend/data_store/b75c137b-167d-43db-bfef-53266dddfeca/: data.parquet
backend/db/: session.py
backend/models/: __init__.py  dataset.py  job.py  preset.py  project.py  user.py
backend/repositories/: dataset_repo.py  job_repo.py
backend/routers/: auth.py  datasets.py  jobs.py  plots.py  projects.py
backend/schemas/: auth.py  dataset.py  job.py
backend/services/: parse_service.py  plot_service.py
data/0c682294-e109-4522-be82-700daff2fd62/: data.parquet
data/4d1472c0-ca44-46ac-a431-ff07d886fcd5/: serial_data.txt
flightdv.egg-info/: PKG-INFO  SOURCES.txt
frontend/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: api.js  main.jsx  store.js  styles.css
frontend/src/components/: ConfirmDialog.jsx  DataTable.jsx  ThemeToggle.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
simulator/: parsed_data.csv
(+4 files in other folders)
